k8s-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  namespace: default
spec:
  rules:
  - host: <your fqdn>
    http:
      paths:
      - backend:
          serviceName: grpc-calculator-service
          servicePort: grpc
  tls:
  # This secret must exist beforehand
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  - secretName: tls-secret
    hosts:
      - <your fqdn>
